[tool.poetry]
name = "kskit"
version = "0.1.0"
description = ""
authors = ["Francisco ORCHARD <f.orchard@epiconcept.fr>", "William MADIE <w.madie@epiconcept.fr>"]
license = "Copyright Epiconcept"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.4.0"
fabric = "^3.2.2"
cryptography = "^42.0.5"
opencv-python = "^4.9.0.80"
pynetdicom = "^2.0.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
requests = "^2.31.0"
xmltodict = "^0.13.0"
pandas = "^2.2.1"
pyarrow = "^15.0.1"
python-barcode = {extras = ["images"], version = "^0.15.1"}
qrcode = "^7.4.2"
pyzbar = {extras = ["scripts"], version = "^0.1.9"}
pycryptodome = "^3.20.0"
h5py = "^3.10.0"
imageio = "^2.34.0"
tqdm = "^4.66.2"
pillow = "^10.2.0"
gdcm = "^1.1"
easyocr = "^1.7.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
# A tool for reporting Code Complexity Metrics
radon = "^6.0.1"
# A tool for monitoring Code Complexity Metrics in CI
xenon = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
